# mlops_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
data/: .gitignore  x_test.pt.dvc  x_train.pt.dvc  y_test.pt.dvc  y_train.pt.dvc
mlops_project/: infer.py  main.py  model.py  train.py  utils.py
models/: .gitignore  dense_network.pt.dvc  y_pred.pt.dvc
