[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = "MLOps course project"
authors = ["Zinnurov Artyom <zinnurov.artyom.zinnurov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
