[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = "MLOps course project"
authors = ["Zinnurov Artyom <zinnurov.artyom.zinnurov@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/artyomuiii/mlops_project"
keywords = ["data science", "machine learning", "mlops"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
torch = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["mlops_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
